--- a/values-minio.yaml
+++ b/values-minio.yaml
@@ -203,7 +203,7 @@ statefulset:
   replicaCount: 6
   ## @param statefulset.zones Number of zones (only for MinIO&reg; distributed mode)
   ##
-  zones: 1
+  # zones: 1
   ## @param statefulset.drivesPerNode Number of drives attached to every node (only for MinIO&reg; distributed mode)
   ##
   drivesPerNode: 2
