--- a/values-minio.yaml
+++ b/values-minio.yaml
@@ -26,7 +26,7 @@ nameOverride: ""
 fullnameOverride: ""
 ## @param commonLabels Labels to add to all deployed objects
 ##
-commonLabels: {}
+commonLabels: { app: minio }
 ## @param commonAnnotations Annotations to add to all deployed objects
 ##
 commonAnnotations: {}
