--- a/values-minio.yaml
+++ b/values-minio.yaml
@@ -35,7 +35,7 @@ commonAnnotations: {}
 kubeVersion: ""
 ## @param clusterDomain Default Kubernetes cluster domain
 ##
-clusterDomain: cluster.gcp
+clusterDomain: cluster.local
 ## @param extraDeploy Array of extra objects to deploy with the release
 ##
 extraDeploy: []
@@ -651,7 +651,7 @@ ingress:
   ## This is supported in Kubernetes 1.18+ and required if you have more than one IngressClass marked as the default for your cluster.
   ## ref: https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/
   ##
-  ingressClassName: "nginx"
+  ingressClassName: ""
   ## @param ingress.hostname Default host for the ingress resource
   ##
   hostname: console.s3.ekosistemdatajabar.id
@@ -760,7 +760,7 @@ apiIngress:
   ## This is supported in Kubernetes 1.18+ and required if you have more than one IngressClass marked as the default for your cluster.
   ## ref: https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/
   ##
-  ingressClassName: "nginx"
+  ingressClassName: ""
   ## @param apiIngress.hostname Default host for the ingress resource
   ##
   hostname: s3.ekosistemdatajabar.id
