--- a/values-minio.yaml
+++ b/values-minio.yaml
@@ -654,7 +654,7 @@ ingress:
   ingressClassName: ""
   ## @param ingress.hostname Default host for the ingress resource
   ##
-  hostname: console.s3.ekosistemdatajabar.id
+  hostname: s3-console.ekosistemdatajabar.id
   ## @param ingress.path The Path to MinIO&reg;. You may need to set this to '/*' in order to use this with ALB ingress controllers.
   ##
   path: /
