--- a/values-minio-bitnami.yaml
+++ b/values-minio-bitnami.yaml
@@ -683,6 +683,12 @@ ingress:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/server-snippets: |
+      location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+      }
     # nginx.ingress.kubernetes.io/server-snippets: |
     #   location / {
     #     proxy_set_header Upgrade $http_upgrade;
