--- a/values-minio-bitnami.yaml
+++ b/values-minio-bitnami.yaml
@@ -635,8 +635,8 @@ service:
   ## This can be used to set the LoadBalancer service type to internal only.
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
   ##
-  annotations:
-    beta.cloud.google.com/backend-config: '{"ports": {"9001":"feathers-backendconfig"}}'
+  annotations: {}
+# beta.cloud.google.com/backend-config: '{"ports": {"9001":"feathers-backendconfig"}}'
 ## Configure the ingress resource that allows you to access the
 ## MinIO&reg; Console. Set up the URL
 ## ref: https://kubernetes.io/docs/user-guide/ingress/
@@ -814,6 +814,12 @@ apiIngress:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/server-snippets: |
+      location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+      }
     # nginx.ingress.kubernetes.io/server-snippets: |
     #   location / {
     #     proxy_set_header Upgrade $http_upgrade;
