--- a/values-minio-bitnami.yaml
+++ b/values-minio-bitnami.yaml
@@ -594,7 +594,7 @@ sidecars: []
 service:
   ## @param service.type MinIO&reg; service type
   ##
-  type: ClusterIP
+  type: LoadBalancer
   ## @param service.ports.api MinIO&reg; API service port
   ## @param service.ports.console MinIO&reg; Console service port
   ##
