--- a/values-minio-bitnami.yaml
+++ b/values-minio-bitnami.yaml
@@ -594,7 +594,7 @@ sidecars: []
 service:
   ## @param service.type MinIO&reg; service type
   ##
-  type: LoadBalancer
+  type: ClusterIP
   ## @param service.ports.api MinIO&reg; API service port
   ## @param service.ports.console MinIO&reg; Console service port
   ##
@@ -683,12 +683,17 @@ ingress:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/server-snippets: |
-      location / {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-      }
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/secure-backends: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/websocket-services: minio-headless
+    nginx.org/websocket-services: minio-headless
+    # nginx.ingress.kubernetes.io/server-snippets: |
+    #   location / {
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "upgrade";
+    #   }
     # nginx.ingress.kubernetes.io/server-snippets: |
     #   location / {
     #     proxy_set_header Upgrade $http_upgrade;
